2010-12-03
Improved many conventions with booleans throughout the site
	Appears to be working fine now, settings need to be tested
Added use_https option in general settings
	This is so logins can change to https
	This also sets a secure flag on the session cookie
Removed generic_validate_boolean() functions from the system

2010-11-30
Improved error API
	Errors are stored in a "request" database, so all requests can be referred to
	This database should periodically be purged, and there needs to be
Found one of the longest processes (~5 seconds) is due to counting files in watched.module to verify folder integrity
Configuring errors shows on general settings page
Using a loop for selecting which files are handled by each module provided a decent speed boost, handles_all() in file.inc
Invoke_menu() now closes the session after output_() function is called
Added a 3rd deep select option that also adds information for "cron_only" modules on demand
Removed "$force" option from all add_ functions, system is smart enough now
Removed add_all() from files.module since it was only used by cron so it is now in cron.module
Discogs downloads and displays remote image, this might get slow and needs improvement
Added request printouts to live theme

2010-11-23
Fixed and colorized CLI
	In the process of finishing tools using CLI to debug
Added agent and agent_simple for getting HTTP_USER_AGENT
Added og_theme for getting the contents of an outputted theme

2010-11-21
Rearranged some code
Fixed the output in the search box, was vulnerable to XSS

2010-11-16
Fixed some bugs in url()
	Links should be inputted into url() as fully qualified urlencoded links
	url() decode the link piece by piece, and reconstructs it with the correct menu item
	url() also urlencodes the link
The register_output_vars('get') url was not being urlencoded, but with the corrections to url() it is
Improved speed a little bit by altering the way templates work	
	Added templates/%template/%tfile menu entry