@@ -49,7 +49,7 @@ function setup_sitemap()
  */
 function setting_no_bots($settings)
 {
-	return (!isset($settings['enable_https']) || @$settings['no_bots'] == true);
+	return (!isset($settings['enable_https']) || ($settings['no_bots'] && $settings['no_bots'] !== 'false'));
 }
 
 
