@@ -1,3 +1,9 @@
+2010-12-07
+Improved error API greatly
+	Error codes are now completely bitwise including E_MODULE and custom error codes
+Fixed files.module to use watched.module when possible
+Corrections to code, see repo changes
+
 2010-12-03
 Improved many conventions with booleans throughout the site
 	Appears to be working fine now, settings need to be tested
